quil-rs/src/program/snapshots/quil_rs__program__calibration__tests__expansion@Precedence-Prefer-Exact-Qubit-Match.snap
---
source: quil-rs/src/program/calibration.rs
expression: calibrated_program.to_quil_or_debug()
---
DEFCAL MEASURE 0 addr:
    PRAGMA CORRECT
DEFCAL MEASURE q addr:
    PRAGMA INCORRECT_PRECEDENCE
PRAGMA CORRECT
