quil-rs/src/program/snapshots/quil_rs__program__calibration__tests__expansion@Precedence-Require-Name-Match.snap
---
source: quil-rs/src/program/calibration.rs
expression: calibrated_program.to_quil_or_debug()
---
DEFCAL MEASURE!midcircuit q addr:
    PRAGMA CORRECT
DEFCAL MEASURE!wrong-name 0 addr:
    PRAGMA INCORRECT_NAME
DEFCAL MEASURE 0 addr:
    PRAGMA INCORRECT_NAME
PRAGMA CORRECT
