quil-rs/src/program/snapshots/quil_rs__program__calibration__tests__expansion@Precedence-Require-No-Name-Match.snap
---
source: quil-rs/src/program/calibration.rs
expression: calibrated_program.to_quil_or_debug()
---
DEFCAL MEASURE q addr:
    PRAGMA CORRECT
DEFCAL MEASURE!wrong-name 0 addr:
    PRAGMA INCORRECT_NAME
DEFCAL MEASURE!midcircuit 0 addr:
    PRAGMA INCORRECT_NAME
PRAGMA CORRECT
