quil-rs/src/program/snapshots/quil_rs__program__calibration__tests__expansion@Precedence-Variable-Match.snap
---
source: quil-rs/src/program/calibration.rs
expression: calibrated_program.to_quil_or_debug()
---
DEFCAL MEASURE q:
    PRAGMA INCORRECT_RECORD_VS_EFFECT
DEFCAL MEASURE b addr:
    PRAGMA INCORRECT_ORDER
DEFCAL MEASURE q addr:
    PRAGMA CORRECT
PRAGMA CORRECT
