quil-rs/src/program/snapshots/quil_rs__program__calibration__tests__expansion@Reset-Calibration.snap
---
source: quil-rs/src/program/calibration.rs
expression: calibrated_program.to_quil_or_debug()
---
DEFCAL RESET 0:
    PRAGMA CORRECT
DEFCAL RESET q:
    PRAGMA INCORRECT_PRECEDENCE
DEFCAL RESET 1:
    PRAGMA INCORRECT_QUBIT
PRAGMA CORRECT
