quil-rs/src/program/snapshots/quil_rs__program__calibration__tests__expansion@ShiftPhase.snap
---
source: quil-rs/src/program/calibration.rs
expression: calibrated_program.to_string()
---
DEFCAL RZ(%theta) %q:
	SHIFT-PHASE q "rf" -%theta
SHIFT-PHASE 0 "rf" -pi

